[metadata]
name = csh_ldap
author = Liam Middlebrook
author-email = liammiddlebrook@gmail.com
summary = CSH LDAP ORM
url = "https://github.com/liam-middlebrook/csh_ldap"
description-file = README.md
license = MIT
version = 1.2.0
classifier =
    Natural Language :: English
    Operating System :: POSIX :: Linux
