[metadata]
name = csh_ldap
author = Liam Middlebrook
author-email = liammiddlebrook@gmail.com
url = https://github.com/liam-middlebrook/csh_ldap
description = CSH LDAP ORM
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
version = 2.4.0
classifier =
    Natural Language :: English
    Operating System :: POSIX :: Linux
